# FastLSH-MPI

./: CMakeLists.txt  README.md
src/: boostmpiCompute.cpp
